# click-app

./: CHANGELOG.md  README.md  input-for-demo.txt
.github/workflows/: push.yml
{{cookiecutter.hyphenated}}/: Makefile  pyproject.toml
{{cookiecutter.hyphenated}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.hyphenated}}/tests/: test_{{cookiecutter.underscored}}.py
{{cookiecutter.hyphenated}}/{{cookiecutter.underscored}}/: __main__.py  cli.py
