[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.hyphenated }}"
dynamic = ["version"]
description = "{{ cookiecutter.description or "" }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click"
]
{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.hyphenated }}/actions"
{% endif %}
[project.entry-points.console_scripts]
{{ cookiecutter.hyphenated }} = "{{ cookiecutter.underscored }}.cli:cli"

[project.optional-dependencies]
test = ["isort", "black", "flake8", "pylint", "pytest", "pytest-cov"]
dev = ["pip-tools"]
release = ["python-semantic-release==9.4.0", "build", "setuptools-scm[toml]"]

[tool.setuptools]
packages = ["{{ cookiecutter.underscored }}"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "{{ cookiecutter.underscored }}/_version.py"

[tool.semantic_release]
version_variable = ["{{ cookiecutter.underscored }}/_version.py"]
upload_to_pypi = false
patch_without_tag = true
major_on_zero = true
minor_on_no_changes = true
branch = "main"

[tool.flake8]
max-line-length = 120
exclude = [".venv"]

[tool.pylint]
message.disable = "C0103,R0902,R0913,E1102"
format.max-line-length = 120

[tool.black]
exclude = "{{ cookiecutter.underscored }}/_version.py"
line-length = 120

